[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
flutter_rust_bridge = { version = "=2.1.0", features = ["chrono"] }
futures-util = "0.3.30"
http = "1.1.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "http3", "json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
tokio = { version = "1", features = ["full"] }
