[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.38"
flutter_rust_bridge = { version = "=2.1.0", features = ["chrono"] }
futures-util = "0.3.30"
http = "1.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "http3", "json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
