[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.38"
flutter_rust_bridge = { version = "=2.3.0", features = ["chrono"] }
futures-util = "0.3.30"
reqwest = { version = "0.12.7", default-features = false, features = ["charset", "http2", "http3", "rustls-tls", "rustls-tls-native-roots", "stream", "multipart"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"

[profile.release]
panic = "abort"

[profile.dev]
opt-level = 3
panic = "abort"
